<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_size">Size</string>
    <string name="item_color">Color</string>
    <string name="save_Button">Save</string>
</resources>
