<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/ext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_item"
                android:textStyle="italic"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"/>
            <EditText
                android:id="@+id/babyItem"
                android:layout_below="@+id/ext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_below="@+id/babyItem"
                android:layout_height="wrap_content"
                android:hint="@string/item_quantity"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/itemColour"
                android:layout_width="match_parent"
                android:layout_below="@+id/itemQuantity"
                android:layout_height="wrap_content"
                android:hint="@string/item_color"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/itemSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemColour"
                android:hint="@string/item_size"
                android:textSize="18sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemSize"
                android:background="@color/colorAccent"
                android:textSize="14sp"
                android:id="@+id/save"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:textColor="@android:color/white"
                android:text="@string/save_Button"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>